# AtomicOS

./: .gitignore  AtomicOS_knowledge_transfer.txt  BUILD.md  Cargo.toml  Makefile  README.md  dummy_test.txt  linker.ld  run.sh  test_sizeof.rs  test_tty.py
boot/: boot.asm  long_mode_init.asm  multiboot_header.asm
src/: lib.rs  serial.rs  vga.rs
src/allocator/: bump.rs  mod.rs
src/drivers/: mod.rs
src/drivers/ata/: mod.rs  pio.rs
src/drivers/keyboard/: mod.rs  scancodes.rs
src/drivers/mouse/: mod.rs
src/drivers/tty/: mod.rs
src/fs/: dentry.rs  error.rs  fd.rs  file.rs  inode.rs  mod.rs  mount.rs  pipe.rs  ramfs.rs  vfs.rs
src/fs/fat32/: fat32.rs  mod.rs
src/interrupts/: gdt.rs  idt.rs  mod.rs  usermode.rs
src/loader/: elf.rs
src/memory/: frame_allocator.rs  mod.rs  paging.rs
src/scheduler/: context.rs  mod.rs  task.rs
src/shell/: mod.rs  state.rs
src/shell/commands/: atatest.rs  cat.rs  catbin.rs  cd.rs  clear.rs  cp.rs  date.rs  echo.rs  exec.rs  help.rs  kill.rs  log.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  neofetch.rs  objdump.rs  ps.rs  pwd.rs  rm.rs  shellscript.rs  spawn.rs  touch.rs  uptime.rs  version.rs  vfstest.rs  whoami.rs  write.rs  yield_cmd.rs
src/syscalls/: mod.rs
tests/test_elf/: linker.ld  test.S  test.elf  test_fd.S  test_fork.S  test_pipe.S
userland/: linker.ld
userland/.cargo/: config.toml
userland/atomiclibc/: Cargo.toml
userland/atomiclibc/src/: crt0.rs  lib.rs  malloc.rs  stdio.rs  string.rs  syscall.rs  unistd.rs
userland/fork_wait/: Cargo.toml
userland/hello/: Cargo.toml
userland/pipe_test/: Cargo.toml
(+3 files in other folders)
