[package]
name = "atomic_os"
version = "0.1.0"
edition = "2021"
authors = ["AtomicOS Team"]

[lib]
name = "atomic_os"
crate-type = ["staticlib"]

[dependencies]
x86_64 = "0.14.10"
spin = "0.9.8"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
bit_field = "0.10.2"
bitflags = "2.4.0"
pic8259 = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
